<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_question"
        android:layout_width="187dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_result"
        android:layout_width="141dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:hint="@string/result"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/lbl_question"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="52dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_question" />

    <TextView
        android:id="@+id/lbl_isCorrect"
        android:layout_width="195dp"
        android:layout_height="62dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="44dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />

    <TextView
        android:id="@+id/lblRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="166dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="219dp"
        android:text="@string/remaining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lblRemainingNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_question" />

    <TextView
        android:id="@+id/lblRemainingNumber"
        android:layout_width="70dp"
        android:layout_height="22dp"
        android:layout_marginBottom="166dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblRemaining"
        app:layout_constraintTop_toBottomOf="@+id/lbl_isCorrect"
        app:layout_constraintVertical_bias="0.619" />

    <LinearLayout
        android:id="@+id/levels"
        style="?android:attr/buttonBarStyle"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/levels_spinner"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <EditText
        android:id="@+id/txt_calculations"
        android:layout_width="89dp"
        android:layout_height="42dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/calc_n"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/levels"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_set_calcs"
        android:layout_width="72dp"
        android:layout_height="39dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:text="@string/set"
        app:layout_constraintStart_toEndOf="@+id/txt_calculations"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="12dp"
        android:text="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRemaining" />

    <TextView
        android:id="@+id/lbl_score"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="420dp"
        app:layout_constraintStart_toEndOf="@+id/lbl_puntuacion"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
